--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>景区一张图</title>
+  <!-- <script src="http://cdn.sencdn.com/widget2/static/js/bundle.js"></script> -->
 </head>
 
 <body>
